--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,48 @@
+@inproceedings{laforenza2007biological,
+  title={Biological experiments on the grid: A novel workflow management platform},
+  author={Laforenza, Domenico and Lombardo, Rosario and Scarpellini, M and Serrano, Massimo and Silvestri, Fabrizio and Faccioli, P},
+  booktitle={Computer-Based Medical Systems, 2007. CBMS'07. Twentieth IEEE International Symposium on},
+  pages={489--494},
+  year={2007},
+  organization={IEEE}
+}
+
+@inproceedings{schuller2008chemomentum,
+  title={Chemomentum-UNICORE 6 based infrastructure for complex applications in science and technology},
+  author={Schuller, Bernd and Demuth, Bastian and Mix, Hartmut and Rasch, Katharina and Romberg, Mathilde and Sild, Sulev and Maran, Uko and Ba{\l}a, Piotr and Del Grosso, Enrico and Casalegno, Mos{\'e} and others},
+  booktitle={Euro-Par 2007 Workshops: Parallel Processing},
+  pages={82--93},
+  year={2008},
+  organization={Springer}
+}
+
+@incollection{taylor2007triana,
+  title={The triana workflow environment: Architecture and applications},
+  author={Taylor, Ian and Shields, Matthew and Wang, Ian and Harrison, Andrew},
+  booktitle={Workflows for e-Science},
+  pages={320--339},
+  year={2007},
+  publisher={Springer}
+}
+
+@incollection{plankensteiner2009fault,
+  title={Fault Detection, Prevention and Recovery in Current Grid Workflow Systems},
+  author={Plankensteiner, Kassian and Prodan, Radu and Fahringer, Thomas and Kert{\'e}sz, Attila and Kacsuk, P{\'e}ter},
+  booktitle={Grid and Services Evolution},
+  pages={1--13},
+  year={2009},
+  publisher={Springer}
+}
+
+@INPROCEEDINGS{Plankensteiner2009, 
+author={Plankensteiner, K. and Prodan, R. and Fahringer, T.}, 
+booktitle={e-Science, 2009. e-Science '09. Fifth IEEE International Conference on}, 
+title={A New Fault Tolerance Heuristic for Scientific Workflows in Highly Distributed Environments Based on Resubmission Impact}, 
+year={2009}, 
+month={Dec}, 
+pages={313-320}, 
+}
+
 @MISC{BLAST,
  title={Basic Local Alignment Search Tools},
  howpublished={\url{http://blast.ncbi.nlm.nih.gov/Blast.cgi}},
