--- a/biblio.bib
+++ b/biblio.bib
@@ -854,7 +854,7 @@ pages={351-359},
 
 @article{Celaya2010,author = {Javier Celaya and Loris Marchal},title = {A Fair Decentralized Scheduler for Bag-of-Tasks Applications on Desktop Grids},journal ={Cluster Computing and the Grid, IEEE International Symposium on},volume = {0},isbn = {978-0-7695-4039-9},year = {2010},pages = {538-541},publisher = {IEEE Computer Society},address = {Los Alamitos, CA, USA},},
 
-@INPROCEEDINGS{Chen2013,
+@INPROCEEDINGS{Chen2013a,
   author = {Chen, Weiwei and Deelman, Ewa and Sakellariou, Rizos},
   title = {Imbalance optimization in scientific workflows},
   booktitle = {Proceedings of the 27th international ACM conference on International conference on supercomputing},
@@ -1060,7 +1060,7 @@ month=jul,
 	title={DAG-Extended Deletion Algorithm in Graphical Abstract Grid Workflow Model for Remote Sensing Quantitative Retrieval},
 	booktitle={2nd International Conference on Education Technology and Computer},
 	pages={369},
-	volume={5}
+	volume={5},
     	year={2010},
  	month=jul,
 },
@@ -2938,7 +2938,7 @@ pages={23-30},
     number = {3--4},
     year = {2005},
 },
-@INPROCEEDINGS{Chen2013,
+@INPROCEEDINGS{Chen2013b,
 	author={Chen, Weiwei and Ferreira da Silva, Rafael and Deelman, Ewa and Sakellariou, Rizos},
 	booktitle={eScience (eScience), 2013 IEEE 9th International Conference on},
 	title={Balanced Task Clustering in Scientific Workflows},
