--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,12 @@
+@incollection{fahringer2007askalon,
+  title={Askalon: A development and grid computing environment for scientific workflows},
+  author={Fahringer, Thomas and Prodan, Radu and Duan, Rubing and Hofer, J{\"u}urgen and Nadeem, Farrukh and Nerieri, Francesco and Podlipnig, Stefan and Qin, Jun and Siddiqui, Mumtaz and Truong, Hong-Linh and others},
+  booktitle={Workflows for e-Science},
+  pages={450--471},
+  year={2007},
+  publisher={Springer}
+}
+
 @inproceedings{laforenza2007biological,
   title={Biological experiments on the grid: A novel workflow management platform},
   author={Laforenza, Domenico and Lombardo, Rosario and Scarpellini, M and Serrano, Massimo and Silvestri, Fabrizio and Faccioli, P},
