add keywords of machine learning

--- a/ftc.tex
+++ b/ftc.tex
@@ -46,11 +46,11 @@ and
 \address[B]{University of Innsbruck, Institute for Computer Science, Innsbruck, Austria}
 
 \begin{abstract}
-Large scale scientific workflows can be composed of many fine computational granularity tasks. Task clustering has been proven to be an effective method to reduce execution overhead and increase the computational granularity of workflow tasks executing on distributed resources. However, a job composed of multiple tasks may have a greater risk of suffering from failures than a job composed of a single task. Our theoretic analysis and simulation results demonstrate that transient failures can have a significant impact on the runtime performance of scientific workflows that use existing clustering policies that ignore failures. We propose a general task failure modeling framework to address these performance issues. We show the necessity to consider the fault tolerance in the task clustering methods.  We further propose three methods to improve the runtime performance of executing workflows in dynamic environments. A trace based simulation is performed and it shows that our methods improve the workflow makespan significantly for five important applications.    
+Large scale scientific workflows can be composed of many fine computational granularity tasks. Task clustering has been proven to be an effective method to reduce execution overhead and increase the computational granularity of workflow tasks executing on distributed resources. However, a job composed of multiple tasks may have a greater risk of suffering from failures than a job composed of a single task. Our theoretic analysis and simulation results demonstrate that transient failures can have a significant impact on the runtime performance of scientific workflows that use existing clustering policies that ignore failures. We propose a general task failure modeling framework and use a Maximum Likelihood Estimation based parameter estimation to address these performance issues. We show the necessity to consider the fault tolerance in the task clustering methods.  We further propose three methods to improve the runtime performance of executing workflows in dynamic environments. A trace based simulation is performed and it shows that our methods improve the workflow makespan significantly for five important applications.    
 \end{abstract}
 
 \begin{keyword}
-scientific workflows\sep fault tolerance\sep scheduling\sep failure\sep high availability \sep clustering
+scientific workflows\sep fault tolerance\sep parameter estimation\sep failure\sep machine learning \sep clustering
 \end{keyword}
 \end{frontmatter}
 
