add Thomas' comment

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,12 @@
+@inproceedings{da2013toward,
+  title={Toward fine-grained online task characteristics estimation in scientific workflows},
+  author={da Silva, Rafael Ferreira and Juve, Gideon and Deelman, Ewa and Glatard, Tristan and Desprez, Fr{\'e}d{\'e}ric and Thain, Douglas and Tovar, Benjam{\'\i}n and Livny, Miron},
+  booktitle={Proceedings of the 8th Workshop on Workflows in Support of Large-Scale Science},
+  pages={58--67},
+  year={2013},
+  organization={ACM}
+}
+
 @incollection{fahringer2007askalon,
   title={Askalon: A development and grid computing environment for scientific workflows},
   author={Fahringer, Thomas and Prodan, Radu and Duan, Rubing and Hofer, J{\"u}urgen and Nadeem, Farrukh and Nerieri, Francesco and Podlipnig, Stefan and Qin, Jun and Siddiqui, Mumtaz and Truong, Hong-Linh and others},
